se comienza el panel de los avisos que se hace en la empresa

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -28,5 +28,11 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="Avisos--panel">
+            <div class="Hora--avisos">12:12 PM</div>
+            <div class="Fecha--avisos"></div>
+        </section>
+    </main>
 </body>
 </html>
