Se termina la estructura de la section de los avisos

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -31,7 +31,32 @@
     <main>
         <section class="Avisos--panel">
             <div class="Hora--avisos">12:12 PM</div>
-            <div class="Fecha--avisos"></div>
+            <div class="Fecha--avisos">12/09/2024</div>
+            <div class="Panel">
+                <table>
+                    <caption>Avisos</caption>
+                    <tr>
+                        <td>Hora</td>
+                        <td>12/09/2024</td>
+                    </tr>
+                    <tr>
+                        <td>Minutos</td>
+                        <td>11/10/2024</td>
+                    </tr>
+                    <tr>
+                        <td>Segundos</td>
+                        <td>12/12/2024</td>
+                    </tr>
+                    <tr>
+                        <td>Milisegundos</td>
+                        <td>11/06/2024</td>
+                    </tr>
+                    <tr>
+                        <td>nanosegundos</td>
+                        <td>12/08/2024</td>
+                    </tr>
+                </table>
+            </div>
         </section>
     </main>
 </body>
