Se comienza la estructura de la section estadistica de la empresa

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -58,6 +58,9 @@
                 </table>
             </div>
         </section>
+        <section class="panel--Estadistica">
+            
+        </section>
     </main>
 </body>
 </html>
