Se termina la primera parte del panel de las estadisticas de la empresa , ahora colocale el div donde van a ir la grafica

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -59,7 +59,28 @@
             </div>
         </section>
         <section class="panel--Estadistica">
-            
+            <div class="Content--panel--Estadistica">
+                <h3>Estadistica</h3>
+                <div class="Historial-ventas">Historial de ventas</div>
+                <div class="Ventas">
+                    <span>
+                        100
+                        <div class="Title">Ventas</div>
+                    </span>
+                </div>
+                <div class="Ingresos">
+                    <span>
+                        10.000
+                        <div class="Title">Ingresos</div>
+                    </span>
+                </div>
+                <div class="Egresos">
+                    <span>
+                        10.000
+                        <div class="Title">Egresos</div>
+                    </span>
+                </div>
+            </div>
         </section>
     </main>
 </body>
