Se termina el panel de las estadisticas de la empresa , coloque un comentario donde van a poner la grafica de chartsjs

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -80,6 +80,10 @@
                         <div class="Title">Egresos</div>
                     </span>
                 </div>
+
+                <div class="Grafica--Estadistica">
+                    <!--Implementacion de Chartsjs-->
+                </div>
             </div>
         </section>
     </main>
