Se comienza la section de los pedidos

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -58,6 +58,7 @@
                 </table>
             </div>
         </section>
+
         <section class="panel--Estadistica">
             <div class="Content--panel--Estadistica">
                 <h3>Estadistica</h3>
@@ -86,6 +87,8 @@
                 </div>
             </div>
         </section>
+
+        <section class="Panel--pedidos"></section>
     </main>
 </body>
 </html>
