Tengo una mejor idea para no copiar y pegar el codigo una y otra vez jejje

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -63,19 +63,19 @@
             <div class="Content--panel--Estadistica">
                 <h3>Estadistica</h3>
                 <div class="Historial-ventas">Historial de ventas</div>
-                <div class="Ventas">
+                <div class="Ventas--container">
                     <span>
                         100
                         <div class="Title">Ventas</div>
                     </span>
                 </div>
-                <div class="Ingresos">
+                <div class="Ingresos--container">
                     <span>
                         10.000
                         <div class="Title">Ingresos</div>
                     </span>
                 </div>
-                <div class="Egresos">
+                <div class="Egresos--container">
                     <span>
                         10.000
                         <div class="Title">Egresos</div>
@@ -88,7 +88,35 @@
             </div>
         </section>
 
-        <section class="Panel--pedidos"></section>
+        <section class="Panel--pedidos">
+            <div class="Pedidos">
+                <h3>Pedidos</h3>
+            </div>
+            <div class="Solicitud--panel">
+                <span>
+                    100
+                    <div class="Title">Solicitudes</div>
+                </span>
+            </div>
+            <div class="Procesados--container">
+                <span>
+                    100
+                    <div class="Title">Procesados</div>
+                </span>
+            </div>
+            <div class="Via--container">
+                <span>
+                    100
+                    <div class="Title">En via</div>
+                </span>
+            </div>
+            <div class="Via--container"></div>
+                <span>
+                    100
+                    <div class="Title">En via</div>
+                </span>
+            </div>
+        </section>
     </main>
 </body>
 </html>
