Se termina la estructura de la section pedidios , con una nueva estructura , ahora voy aplicar eso en la section estadistica y cambiar la semantica

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -92,30 +92,47 @@
             <div class="Pedidos">
                 <h3>Pedidos</h3>
             </div>
-            <div class="Solicitud--panel">
-                <span>
-                    100
-                    <div class="Title">Solicitudes</div>
-                </span>
+            <div class="Container--1">
+                <div class="Solicitudes--container">
+                    <span>
+                        100
+                        <div class="Title">Solicitudes</div>
+                    </span>
+                </div>
+                <div class="Procesados--Container">
+                    <span>
+                        100
+                        <div class="Title">Procesados</div>
+                    </span>
+                </div>
+                <div class="Envios--Regionales">
+                    <span>
+                        Envios Regionales
+                        <div class="Title">100</div>
+                    </span>
+                </div>
             </div>
-            <div class="Procesados--container">
-                <span>
-                    100
-                    <div class="Title">Procesados</div>
-                </span>
+            <div class="Container--2">
+                <article class="Via--container">
+                    <span>
+                        100
+                        <div class="Title">En via</div>
+                    </span>
+                </article>
+                <article class="Completados--Container">
+                    <span>
+                        100
+                        <div class="Title">Completados</div>
+                    </span>
+                </article>
+                <article class="Envios--Nacionales">
+                    <span>
+                        Envios Nacionales
+                        <div class="Title">100</div>
+                    </span>
+                </article>
             </div>
-            <div class="Via--container">
-                <span>
-                    100
-                    <div class="Title">En via</div>
-                </span>
-            </div>
-            <div class="Via--container"></div>
-                <span>
-                    100
-                    <div class="Title">En via</div>
-                </span>
-            </div>
+                
         </section>
     </main>
 </body>
