--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -62,63 +62,69 @@
         <section class="panel--Estadistica">
             <div class="Content--panel--Estadistica">
                 <h3>Estadistica</h3>
-                <div class="Historial-ventas">Historial de ventas</div>
-                <div class="Ventas--container">
-                    <span>
-                        100
-                        <div class="Title">Ventas</div>
-                    </span>
-                </div>
-                <div class="Ingresos--container">
-                    <span>
-                        10.000
-                        <div class="Title">Ingresos</div>
-                    </span>
-                </div>
-                <div class="Egresos--container">
-                    <span>
-                        10.000
-                        <div class="Title">Egresos</div>
-                    </span>
+                <div class="Container--Estadisitca__1">
+                    <article class="Historia--Ventas">Historia de ventas</article>
+                    <article class="Ventas--container">
+                        <span>
+                            100
+                            <div class="Title">Ventas</div>
+                        </span>
+                    </article>
                 </div>
 
-                <div class="Grafica--Estadistica">
-                    <!--Implementacion de Chartsjs-->
+                <div class="Container--Estadistica__2">
+                    <article class="Ingresos--Container">
+                        <span>
+                            10.000
+                            <div class="Title">Ingresos</div>
+                        </span>
+                    </article>
+                    <article class="Egresos--Container">
+                        <span>
+                            10.000
+                            <div class="Title">Egresos</div>
+                        </span>
+                    </article>
                 </div>
+
+                <article class="Grafica--Estadistica">
+                    <!--Implementacion de Chartsjs-->
+                </article>
             </div>
         </section>
 
         <section class="Panel--pedidos">
-            <div class="Pedidos">
+            <article class="Pedidos">
                 <h3>Pedidos</h3>
-            </div>
+            </article>
             <div class="Container--1">
-                <div class="Solicitudes--container">
+                <article class="Solicitudes--container">
                     <span>
                         100
                         <div class="Title">Solicitudes</div>
                     </span>
-                </div>
-                <div class="Procesados--Container">
+                </article>
+                <article class="Procesados--Container">
                     <span>
                         100
                         <div class="Title">Procesados</div>
                     </span>
-                </div>
-                <div class="Envios--Regionales">
+                </article>
+                <article class="Envios--Regionales">
                     <span>
                         Envios Regionales
                         <div class="Title">100</div>
                     </span>
-                </div>
+                </article>
             </div>
+
             <div class="Container--2">
-                <article class="Via--container">
+                <articl class="Via--container">
                     <span>
                         100
                         <div class="Title">En via</div>
                     </span>
-                </article>
+                </articl>
                 <article class="Completados--Container">
                     <span>
                         100
@@ -131,8 +137,7 @@
                         <div class="Title">100</div>
                     </span>
                 </article>
-            </div>
-                
+            </div> 
         </section>
     </main>
 </body>
