Dandole estilo a la clase Content__header

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="Content__header">
-            <img alt="Logo" src="">
+            <img alt="Logo" src="../../Imagenes/Logo.png">
             <a href="#">Salir</a>
         </div>
         <nav class="Navigator--bar">
