--- a/src/layouts/Gerente/Main/estilo.css
+++ b/src/layouts/Gerente/Main/estilo.css
@@ -1,6 +1,11 @@
 /*Por el momento voy a utilizar
 font-family: san-ferif y font-size: 14px ya que voy a utilizar em*/
-
+:root{
+    --PrimaryColor: #FFFFFF;
+    --SecondaryColor: #001752;
+    --ColorNavigatorBar: #232326;
+    --HoverColor: #B1CEF4;
+}
 *{
     margin: 0%;
     padding: 0%;
@@ -21,9 +26,27 @@ header .Content__header{
     align-items: center;
     padding-left: 15px;
     padding-right: 65px;
-    box-shadow: 2px 1px 10px #000;
+    box-shadow: 2px 1px 25px var(--ColorNavigatorBar);
 }
 header .Content__header img{
-    width: 35px;
+    width: 40px;
     margin: 0;
 }
+header .Content__header a{
+    width: 75px;
+    background-color: var(--SecondaryColor);
+    color: var(--PrimaryColor);
+    text-align: center;
+    padding: 5px;
+    text-decoration: none;
+    letter-spacing: 1px;
+    font-weight: 700;
+    border-radius: 12px;
+    transition: .1s linear;
+}
+header .Content__header a:hover{
+    background-color: var(--HoverColor);
+    color: var(--ColorNavigatorBar);
+    border: 2px solid #aaa;
+}
+header 
