Se agrega los iconeso que se van a utilizar en la clase Navigator--bar, para ello cree una carpeta para los iconos en public

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -9,21 +9,21 @@
 <body>
     <header>
         <div class="Content__header">
-            <img alt="Logo" src="../../Imagenes/Logo.png">
+            <img alt="Logo" src="../../../../public/images/Logo/Logo.png">
             <a href="#">Salir</a>
         </div>
         <nav class="Navigator--bar">
             <ul class="Navigator--bar List">
                 <a href="" class="Link">
-                    <Li class="List--cont"><img alt="Inventario" src=""></Li>
+                    <Li class="List--cont"><img alt="Inventario" src="../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
                 </a><a href="" class="Link">
-                    <Li class="List--cont"><img alt="Estadistica" src=""></Li>
+                    <Li class="List--cont"><img alt="Estadistica" src="../../../../public/images/icons/Estadistica.png" title="Estadistica"></Li>
                 </a><a href="" class="Link">
-                    <Li class="List--cont"><img alt="Proveedores" src=""></Li>
+                    <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
                 </a><a href="" class="Link">
-                    <Li class="List--cont"><img alt="Envios/pedidos"></Li>
+                    <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../public/images/icons/Envios.png" title="Envios/pedidos"></Li>
                 </a><a href="" class="Link">
-                    <Li class="List--cont"><img alt="Avisos" src=""></Li>
+                    <Li class="List--cont"><img alt="Avisos" src="../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
                 </a>
             </ul>
         </nav>
