Ya se ha agregado el estilo a algunos elementos de la clase avisos--panel , le estoy poniendo estilo a la tabla

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -30,8 +30,10 @@
     </header>
     <main>
         <section class="Avisos--panel">
-            <div class="Hora--avisos">12:12 PM</div>
-            <div class="Fecha--avisos">12/09/2024</div>
+            <div class="Content--avisos">
+                <div class="Hora--avisos">12:12 PM</div>
+                <div class="Fecha--avisos">12/09/2024</div>
+            </div>
             <div class="Panel">
                 <table>
                     <caption>Avisos</caption>
