--- a/src/layouts/Gerente/Main/estilo.css
+++ b/src/layouts/Gerente/Main/estilo.css
@@ -82,11 +82,61 @@ main{
     left: 310px;
     top: 180px;
     width: 65%;
-    border: 1px solid #000;
     display: flex;
+    gap: 45px;
     padding: 12px;
     margin: 5px 10px 0 15px;
 }
 main .Avisos--panel{
     position: relative;
+    left: -155px;
+    top: -25px;
+    width: 280px;
+    height: 350px;
+    border: 2px solid #000;
+    padding: 15px;
+}
+main .Avisos--panel .Content--avisos{
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    margin-top: 5px;
+    margin-bottom: 35px;
+}
+main .Avisos--panel .Hora--avisos{
+    font-size: 1.3em;
+    text-align: center;
+    width: 105px;
+    border: 1px solid #000;
+    padding: 5px;
+    background-color: var(--SecondaryColor);
+    color: var(--PrimaryColor);
+    letter-spacing: 0.5px;
+    font-weight: 600;
+}
+main .Avisos--panel .Fecha--avisos{
+    display: inline-block;
+    width: 105px;
+    text-align: center;
+    border: 2px solid #000;
+    font-size: 1.3em;
+    width: 105px;
+    border: 1px solid #000;
+    padding: 5px;
+    background-color: var(--SecondaryColor);
+    color: var(--PrimaryColor);
+    font-weight: 600;
+}
+main .Avisos--panel .Panel{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+main .Avisos--panel .Panel table{
+    margin-top: 5px;
+    border: 1px solid #aaa;
+    padding: 10px;
+}
+main .Avisos--panel .Panel table caption{
+    
 }
