Se termina el estilo de la section de estadistica , y se comeinza el estilo de la section de los pedidos

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -90,6 +90,7 @@
                 </div>
 
                 <article class="Grafica--Estadistica">
+                    grafica
                     <!--Implementacion de Chartsjs-->
                 </article>
             </div>
