--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -98,49 +98,51 @@
 
         <section class="Panel--pedidos">
             <article class="Pedidos">
-                <h3>Pedidos</h3>
-            <div class="Container--1">
-                <article class="Solicitudes--container">
-                    <span>
-                        100
-                        <div class="Title">Solicitudes</div>
-                    </span>
-                </article>
-                <article class="Procesados--Container">
-                    <span>
-                        100
-                        <div class="Title">Procesados</div>
-                    </span>
-                </article>
-                <article class="Envios--Regionales">
-                    <span>
-                        Envios Regionales
-                        <div class="Title">100</div>
-                    </span>
-                </article>
-            </div>
-
-            <div class="Container--2">
-                <articl class="Via--container">
-                    <span>
-                        100
-                        <div class="Title">En via</div>
-                    </span>
-                </articl>
-                <article class="Completados--Container">
-                    <span>
-                        100
-                        <div class="Title">Completados</div>
-                    </span>
-                </article>
-                <article class="Envios--Nacionales">
-                    <span>
-                        Envios Nacionales
-                        <div class="Title">100</div>
-                    </span>
-                </article>
-            </div> 
+                <h3>Pedidos</h3> 
             </article>
+            <div class="Container--pedidos">
+                <div class="Container--1">
+                    <article class="Solicitudes--container">
+                        <span>
+                            100
+                            <div class="Title">Solicitudes</div>
+                        </span>
+                    </article>
+                    <article class="Procesados--Container">
+                        <span>
+                            100
+                            <div class="Title">Procesados</div>
+                        </span>
+                    </article>
+                    <article class="Envios--Regionales">
+                        <span>
+                            Envios Regionales
+                            <div class="Title">100</div>
+                        </span>
+                    </article>
+                </div>
+    
+                <div class="Container--2">
+                    <articl class="Via--container">
+                        <span>
+                            100
+                            <div class="Title">En via</div>
+                        </span>
+                    </articl>
+                    <article class="Completados--Container">
+                        <span>
+                            100
+                            <div class="Title">Completados</div>
+                        </span>
+                    </article>
+                    <article class="Envios--Nacionales">
+                        <span>
+                            Envios Nacionales
+                            <div class="Title">100</div>
+                        </span>
+                    </article>
+                </div>
+            </div>
         </section>
     </main>
 </body>
